# FFT

./: README.md
1D_FourierTransform/: audio_signals.py  dft_2.py  fft_ifft.py  fourier_square_wave.py  waves.py
1D_FourierTransform/Python/: dft.py  fft.py  fft_1.py  fft_2.py  fft_python.py  waves.py
2D_FourierTransforms/: 5_gratings_wave_2D.py  5_gratings_wave_2D_with_constant.py  fourier_2D.py  fourier_synthesis.py  fourier_synthesis_1.py  fourier_synthesis_2.py  fourier_synthesis_3.py  fourier_synthesis_4.py  gratings.py  gratings_2d.py  gratings_ifft.py  gratings_rotate.py  gratings_wave_1D.py  gratings_wave_2D.py  gratings_wave_2D_ft.py  gratings_wave_2D_ft_highFreq_rotate.py  sine_wave_ft.py  sine_wave_high_ft.py  two_gratings_wave_2D.py
ImageProcess/: ImageProcess.py  process1.py  process2.py
Nyquist/: environment.py  simu.py
code/Java/: .gitignore
code/Java/src/com/longluo/: Complex.java  DFT.java  FFT.java  FFT_Iteration.java  NTT_OK.txt  (+10 more)
code/cpp/: .gitignore  2d_fourier.cpp  CMakeLists.txt  fft.cpp  fft_iteration.cpp  fft_iteration_multiply_v1.cpp  fft_iteration_multiply_v2.cpp  fft_iteration_multiply_v3.cpp  fft_iteration_multiply_v4.cpp  fft_iteration_multiply_v5.cpp  fft_multiply.cpp  fft_multiply_2fft.cpp  fft_multiply_3fft.cpp  fft_poly_multiply.cpp  fft_recursion.cpp  fft_recursion_multiply_v1.cpp  fft_recursion_multiply_v2.cpp  fft_recursion_multiply_v3.cpp  fft_recursion_v2.cpp  fft_v1.cpp  fft_v6.cpp  fft_v7.cpp  main.cpp  ng.txt  ntt.cpp  ntt_base.cpp  ntt_multiply.cpp  ntt_recursion_multiply.cpp  ok.txt  ok_2fft.txt  ok_3fft.txt  test.txt
(+1 files in other folders)
